--- a/website/index.html
+++ b/website/index.html
@@ -82,7 +82,7 @@
     
     <footer>
         <div class="footer-content">
-            <a href="path_to_your_about_page.html">About SoTube</a>
+            <a href="sotube.html">About SoTube</a>
             <p>&copy; 2023 YAMP. All rights reserved.</p>
         </div>
     </footer>
