--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="header-overlay"></div>
         <div class="header-content">
             <div class="logo-container">
-                <img src="./YAMP_logo.png" alt="YAMP Logo" id="logo" />
+                <img src="YAMP/logo/png" alt="YAMP Logo" id="logo" />
             </div>
             <div class="header-text">
                 <h1>Welcome to YAMP!</h1>
