--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                     break;
                 case 'emailLogin':
                     // Login with email
-                    // Redirect to email-password login page here
+                    window.location.href = "login.html";
                     break;
                 case 'emailRegistration':
                     // Register now
-                    // Redirect to register page here
+                    window.location.href = "register.html";
                     break;
             }
         }
