--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li><a href="#">Advertisement Proposal</a>
                 <ul>
-                    <li><a href="#">To YouTuber</a></li>
+                    <li><a href="proposal.html">To YouTuber</a></li>
                     <li><a href="#">To Advertiser</a></li>
                 </ul>
             </li>
