--- a/mypage.html
+++ b/mypage.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="#">Channel Analysis</a>
                 <ul>
-                    <li><a href="#">Channel Overview</a></li>
+                    <li><a href="overview.html">Channel Overview</a></li>
                     <li><a href="#">Video & Comment Analysis</a></li>
                     <li><a href="#">Keyword Analysis</a></li>
                     <li class="advertiser-only"><a href="#">Channel Controversy Check</a></li>
