--- a/overview.html
+++ b/overview.html
@@ -14,7 +14,8 @@
                 </a>
             </div>
             <div class="header-text">
-                <h1>Channel Overview</h1>
+                <h1>Welcome to YAMP!</h1>
+                <h3>The Ultimate Youtube Ad Matching Platform</h3>
             </div>
         </div>
     </header>
