--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="keyword-visualization">
         <h2>Total Keyword Visualization</h2>
         <p>Explore the current Youtube trends based on video comments' keyword analysis.</p>
-        <!-- Include your visualization tool here -->
+        <img src="total_wordcloud.png" alt="Keyword Visualization" />
     </section>
     
     <section id="introduction">
